--- a/www/longrun-instructions.html
+++ b/www/longrun-instructions.html
@@ -1,6 +1,6 @@
 <p>This app shows how the cumulative proportion of successes changes in a
 binomial experiment.  Each trial has one of two outcomes:
-&ldquo;success&rdquo or &ldquo;failure&rdquo;.</p>
+&ldquo;success&rdquo; or &ldquo;failure&rdquo;.</p>
 <ul>
 <li>Enter the success probability for your experiment in the grey box.</li>
 <li>Clicking the Simulate button will run the specified number of trials of
